ajustes com media query

--- a/index.html
+++ b/index.html
@@ -153,10 +153,10 @@
                 <h3>Chihuahua</h3>
               </div>
               <div class="card-body">
-                <h2>Free</h2>
-                <p>5 Matches Per Day</p>
-                <p>10 Messages Per Day</p>
-                <p>Unlimited App Usage</p>
+                <h2>Grátis</h2>
+                <p>5 Matches por dia</p>
+                <p>10 Mensagens por dia</p>
+                <p>Uso <strong>ilimitado</strong> do aplicativo</p>
                 <button type="button" class="btn btn-lg btn-block btn-outline-dark">Sign Up</button>
               </div>
           </div>
@@ -169,10 +169,10 @@
                 <h3>Labrador</h3>
               </div>
               <div class="card-body">
-                <h2>$49 / mo</h2>
-                <p>Unlimited Matches</p>
-                <p>Unlimited Messages</p>
-                <p>Unlimited App Usage</p>
+                <h2>R$49 / mês</h2>
+                <p>Matches <strong>ilimitados</strong></p>
+                <p>Menssagens <strong>ilimitadas</strong></p>
+                <p>Uso <strong>ilimitado</strong> do aplicativo</p>
                 <button type="button" class="btn btn-lg btn-block btn-dark">Sign Up</button>
               </div>
           </div>
