--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02" data-bs-toggle="collapse">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Contato</a>
+                    <a href="#footer" class="nav-link">Contato</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Preço</a>
+                    <a href="#preco" class="nav-link">Preço</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Download</a>
+                    <a href="#cta" class="nav-link">Download</a>
                 </li>
             </ul>
         </div>
