--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
   </section>
 
 
-  <!-- Testimonials -->
+  <!-- Depoimentos -->
 
   <section id="testimonials">
 
@@ -180,11 +180,11 @@
                 <h3>Mastiff</h3>
               </div>
               <div class="card-body">
-                <h2>$99 / mo</h2>
-                <p>Pirority Listing</p>
-                <p>Unlimited Matches</p>
-                <p>Unlimited Messages</p>
-                <p>Unlimited App Usage</p>
+                <h2>R$99 / mês</h2>
+                <p>Contato prioritário</p>
+                <p>Matches <strong>ilimitados</strong></p>
+                <p>Menssagens <strong>ilimitadas</strong></p>
+                <p>Uso <strong>ilimitado</strong> do aplicativo</p>
                 <button type="button" class="btn btn-lg btn-block btn-dark">Sign Up</button>
               </div>
           </div>
